--- a/book/main.tex
+++ b/book/main.tex
@@ -123,11 +123,7 @@
 %	PART 4: Finite Volume Methods
 %----------------------------------------------------------------------------------------
 
-\part{Part 4: Finite Volume Methods}
-
-\chapterimage{chapter_head_2.pdf} % Chapter heading image
-
-\chapter{Volume Averaging}
+\input{Parts/Part4.tex}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
