Compacted formatting a bit.

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -218,7 +218,7 @@ Applying the same sets of operations to the integral form of the energy equation
 \end{equation}
 \end{eqBox}
 
-\section{Compact Divergence Form}
+\subsection{Compact Divergence Form}
 Considering the compact integral form given in Equation \ref{eqn:compactintegral}, we notice that the divergence theorem can also be applied. Hence, a compact differential form of the Navier-Stokes equations can be obtained
 \begin{eqBox}
 \begin{equation}
