--- a/book/structure.tex
+++ b/book/structure.tex
@@ -192,7 +192,7 @@
 \hbox{}
 \vspace*{\fill}
 \thispagestyle{empty}
-\newpage
+%\newpage
 \fi}
 
 %----------------------------------------------------------------------------------------
